--- a/Naive Bayes Theorem.ipynb
+++ b/Naive Bayes Theorem.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Naive Bayes Classifier"
+    "## Naive Bayes Classifier\n",
+    "\n",
+    "A project to classify spam and not spam messages in the formof texts using NB classifier"
    ]
   },
   {
@@ -249,7 +251,9 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.cross_validation import train_test_split\n",
@@ -446,15 +450,6 @@
     "\n",
     "print('Accuracy score: ', format(accuracy_score(Y_test, predictions)))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
